                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-02-2006 added: More lcd info labels thanks to Jeff McClain.
 - 13-02-2006 fixed: Windows with conditional visibility and WindowClose animations could flash on screen.
 - 13-02-2006 added: New Add/Edit media source dialogs.
 - 13-02-2006 fixed: Page up/down controls were hard to move off from.
 - 12-02-2006 fixed: when changing the sort between ascending and descending autoplay next item in music will follow
 - 12-02-2006 fixed: WindowOpen animations weren't shown.
 - 12-02-2006 fixed: WindowClose animations sometimes resulted in the window never closing (constantly animating)
 - 12-02-2006 changed: Spincontrols of type text set and get the value rather than the index with GetValue() and SetValue()
 - 12-02-2006 fixed: Controls that were hidden would lose their focus.
 - 12-02-2006 fixed: Video bookmarks window was only shown sporadically.
 - 12-02-2006 fixed: music wouldnt highlight the correct item when switching the sorting between ascending and descending
 - 12-02-2006 fixed: sometimes more than one song could be highlighted
 - 12-02-2006 fixed: the correct item should be highlighted for the currently playing item
 - 11-02-2006 added: you can now jump directly to the saved playlists locations using the following commands:
		Music: Xbmc.ActivateWindow(MyMusicFiles,$Playlists)
		Video: Xbmc.ActivateWindow(MyVideos,$Playlists) 
 - 11-02-2006 added: videoplayer.playlistlength and videoplayer.playlistposition to info manager to match the musicplayer info items
 - 11-02-2006 added: my files, settings, xlink kai to startup window settings to match xboxmediacenter.xml