@@ -85,6 +85,7 @@ public:
 
   CStdString GetMusicLabel(int item);
   CStdString GetVideoLabel(int item);
+  CStdString GetPlaylistLabel(int item);
   wstring GetFreeSpace(int drive, bool shortText = false);
   __int64 GetPlayTime();  // in ms
   CStdString GetCurrentPlayTime();
